# sheet-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  explanation.md  main.py  open_posts_analysis.xlsx  pyproject.toml  refactor.md  updated_workbook.xlsx
ai_project_plan/: WebGUI.md
app/: app.py
app/api/endpoints/: health.py  opos.py
app/core/: actions.py  config.py  logging_config.py  metrics.py  prompt_manager.py  sandbox.py
app/dataset/: dataloader.py
app/graph/: graph.py  state.py  tools.py
app/prompt/: planner.jsonl
app/services/: analysis_service.py
app/utils/: common.py  enumeration.py  exceptions.py  gcs.py  types.py  utils.py  validation.py
db_path/: database.db
scripts/: run.sh  setup.sh
tests/core/: test_config.py
